--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --forceExit --maxWorkers=1 --setupFiles dotenv/config",
+    "test:watch": "jest --forceExit --watchAll --maxWorkers=1 --setupFiles dotenv/config",
     "watch": "nodemon index.ts"
   },
   "keywords": [],
@@ -21,11 +22,17 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@jest/globals": "^29.5.0",
     "@types/express": "^4.17.17",
     "@types/image-size": "^0.8.0",
+    "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.2.5",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "tsc": "^2.0.4",
     "typescript": "^5.0.4"
   }
